fixing spacing

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,10 @@
 header{
     background-color: #152237;
     height: 80px;
-    padding: 1em 26px;
+    padding: 8px 16px;
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 }
 header > * {
 	width: 100%;
@@ -17,8 +18,25 @@ header > * > * {
 .logo{
     width: 84px;
     height: 31px;
+	margin-left: 11px;
 }
 
 .hamburger-menu{
-	justify-content: right;
+	width: 18px;
+	height: 100%;
+	padding-block: 18px;
+	margin-right: 21px;
+	display: flex;
+	flex-direction: column;
+	background-color: #fff0;
+	border: none;
+	justify-content: space-evenly;
+	align-items: center;
+	align-self: center;
+}
+
+.hamburger-menu span{
+	width: 100%;
+	height: 4px;
+	background-color: #fff;
 }
